ijkl keylayouts for osx

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
     <id>ijkl</id>
-    <name>IJKL shortctus</name>
+    <name>IJKL Shortctus</name>
     <version>1.0</version>
     <vendor email="dmitry.kandalov@gmail.com" url="http://www.yourcompany.com">Dmitry Kandalov</vendor>
 
