--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,9 @@ compileKotlin {
 }
 
 intellij {
-	version "IU-172.3757.29"
+	def ideVersion = System.getenv().getOrDefault("ACTIVITY_TRACKER_IDEA_VERSION", "IC-172.3757.29")
+	println("Using ide version: ${ideVersion}")
+	version ideVersion
 	pluginName "ijkl-shortcuts"
 	downloadSources true
 	sameSinceUntilBuild false
