--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ jdk: oraclejdk8
 env:
   - IJKL_PLUGIN_IDEA_VERSION=IC-172.3757.29
   - IJKL_PLUGIN_IDEA_VERSION=LATEST-EAP-SNAPSHOT
+
+script: gradlew buildPlugin --info
