--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ env:
   - IJKL_PLUGIN_IDEA_VERSION=IC-172.3757.29
   - IJKL_PLUGIN_IDEA_VERSION=LATEST-EAP-SNAPSHOT
 
-script: gradlew buildPlugin --info
+script: gradle buildPlugin --info
