--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-dist: trusty
 language: java
 jdk: oraclejdk11
 
 env:
-  - IJKL_PLUGIN_IDEA_VERSION=IC-193.5233.102
-  - IJKL_PLUGIN_IDEA_VERSION=LATEST-EAP-SNAPSHOT
+  - IJ_VERSION=IC-193.5233.102
+  - IJ_VERSION=LATEST-EAP-SNAPSHOT
 
 script: ./gradlew check buildPlugin --info
