don't use deprecated ApplicationComponent

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -34,9 +34,7 @@
     <!-- See http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html -->
     <depends>com.intellij.modules.platform</depends>
 
-    <application-components>
-        <component>
-            <implementation-class>ijkl.AppComponent</implementation-class>
-        </component>
-    </application-components>
+    <applicationListeners>
+        <listener class="ijkl.Main" topic="com.intellij.ide.AppLifecycleListener"/>
+    </applicationListeners>
 </idea-plugin>
