--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,11 @@ repositories {
 
 sourceSets {
     main {
-        kotlin.srcDir './src'
-        resources.srcDir './resources'
+        kotlin.srcDir 'src'
+        resources.srcDir 'resources'
     }
     test {
-        kotlin.srcDir './test'
+        kotlin.srcDir 'test'
     }
 }
 
