--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
+import static org.jetbrains.kotlin.gradle.dsl.KotlinVersion.KOTLIN_1_9
+
 plugins {
-    id 'org.jetbrains.intellij' version '1.4.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.5.10'
-    id 'java'
+    id 'org.jetbrains.intellij' version '1.17.3'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
 }
 
 repositories {
@@ -18,25 +19,27 @@ sourceSets {
     }
 }
 
+kotlin {
+    jvmToolchain(17)
+}
 compileKotlin {
-    kotlinOptions {
-        jvmTarget = "11"
-        apiVersion = "1.5"
-        languageVersion = "1.5"
+    compilerOptions {
+        apiVersion.set(KOTLIN_1_9)
+        languageVersion.set(KOTLIN_1_9)
         // Compiler flag to allow building against pre-released versions of Kotlin
         // because IJ EAP can be built using pre-released Kotlin but it's still worth doing to check API compatibility
-        freeCompilerArgs = freeCompilerArgs + ['-Xskip-metadata-version-check']
+        freeCompilerArgs = ["-Xskip-metadata-version-check"]
     }
 }
 
 intellij {
     // To find available IDE versions see https://www.jetbrains.com/intellij-repository/releases
-    version.set('212.4746.92')
+    version = '241.14494.240'
     // version.set("LATEST-EAP-SNAPSHOT")
 
-    pluginName.set('ijkl-shortcuts')
-    downloadSources.set(true)
-    sameSinceUntilBuild.set(false)
-    updateSinceUntilBuild.set(false)
+    pluginName = 'ijkl-shortcuts'
+    downloadSources = true
+    sameSinceUntilBuild = false
+    updateSinceUntilBuild = false
 }
 buildSearchableOptions.enabled = false // Disable because it takes a long time and the plugin doesn't need it
