simplified event redispatch which works in the latest IntelliJ

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -37,4 +37,10 @@
     <applicationListeners>
         <listener class="ijkl.Main" topic="com.intellij.ide.AppLifecycleListener"/>
     </applicationListeners>
+    <actions>
+        <action id="ijkl.MoveCaretLeftAction" class="ijkl.MoveCaretLeftAction" text="Move Caret Left in Text Component" use-shortcut-of="EditorLeft"/>
+        <action id="ijkl.MoveCaretLeftWithSelectionAction" class="ijkl.MoveCaretLeftWithSelectionAction" text="Move Caret Left With Selection in Text Component" use-shortcut-of="EditorLeftWithSelection"/>
+        <action id="ijkl.MoveCaretRightAction" class="ijkl.MoveCaretRightAction" text="Move Caret Right in Text Component" use-shortcut-of="EditorRight"/>
+        <action id="ijkl.MoveCaretRightWithSelectionAction" class="ijkl.MoveCaretRightWithSelectionAction" text="Move Caret Right With Selection in Text Component" use-shortcut-of="EditorRightWithSelection"/>
+    </actions>
 </idea-plugin>
