renamed osx to macos

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -21,7 +21,7 @@
             <li>alt-d - delete next word</li>
             <li>alt-; - delete next character</li>
         </ul>
-        Note that in OSX you will need to configure keyboard input source without dead keys.
+        Note that in macOS you will need to configure keyboard input source without dead keys.
         This can be done after plugin startup in notification popup.
         <br/>
         For more details see <a href="https://github.com/dkandalov/ijkl-shortcuts-plugin">GitHub</a>.
